--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,12 @@
         <param-value>admin</param-value>
     </context-param>
     
+    <context-param>
+        <param-name>db.jndi.name</param-name>
+        <param-value>jdbc/book</param-value>
+    </context-param>
+    
+    
     <session-config>
         <session-timeout>
             30
